Scroll to top in KB browser

--- a/sling/nlp/kb/app/index.html
+++ b/sling/nlp/kb/app/index.html
@@ -96,7 +96,7 @@
     </md-toolbar>
 
     <!-- Content -->
-    <md-content class="md-padding" ng-controller="ItemCtrl as ctrl" flex>
+    <md-content id="main" class="md-padding" ng-controller="ItemCtrl as ctrl" flex>
       <div layout="row">
         <div layout="column" flex="70">
 
