--- a/sling/task/app/index.html
+++ b/sling/task/app/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SLING job dashboard</title>
-  <base href="/status/">
+  <title>Jobs - SLING</title>
+  <base href="/">
   <link rel="shortcut icon" href="appicon.ico" type="image/x-icon" />
 
   <!-- AngularJS libraries -->
@@ -17,6 +17,7 @@
 
   <!-- Angular Material style sheet -->
   <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.1/angular-material.min.css">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 
@@ -35,37 +36,65 @@
         </md-button>
 
         <!-- Title -->
-        <h2><span>Job status</span></h2>
+        <h2><span>Job status for {{host()}}</span></h2>
 
         <!-- Spacer -->
         <span flex></span>
 
         <!-- Menu -->
-        <md-button class="md-icon-button">
-          <i class="material-icons">more_vert</i>
+        <md-button class="md-icon-button" ng-click="refresh()">
+          <i class="material-icons">refresh</i>
         </md-button>
       </div>
     </md-toolbar>
 
     <!-- Content -->
-    <md-content id="main" class="md-padding" ng-controller="JobsCtrl as ctrl" flex>
-      <div layout="row">
-        <div layout="column" flex="70">
-          <!-- Job list -->
-          <div class="card">
-            <div class="card-toolbar" layout="row" layout-align="start center">
-              <span class="md-headline">Jobs</span>
-              <span flex></span>
-              <md-button class="md-icon-button">
-                <i class="material-icons">expand_less</i>
-              </md-button>
-            </div>
+    <md-content id="main" class="md-padding" ng-controller="StatusCtrl as ctrl" flex>
+      <!-- Job list -->
+      <table class="mdl-data-table mdl-data-table--selectable mdl-shadow--2dp">
+        <thead>
+          <tr>
+            <th>Job</th>
+            <th class="mdl-data-table__cell--non-numeric">Name</th>
+            <th>Time</th>
+            <th class="mdl-data-table__cell--non-numeric" width="100%">Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="job in jobs track by job.name", ng-click="select(job.id)">
+            <td>#{{job.id}}</td>
+            <td class="mdl-data-table__cell--non-numeric">{{job.name}}</td>
+            <td>{{job.time}}</td>
+            <td class="mdl-data-table__cell--non-numeric" width="100%">{{job.status}}</td>
+          </tr>
+        </tbody>
+      </table>
 
-            <table class="job-tab">
-            </table>
-          </div>
-
+      <!-- Selected job status -->
+      <div class="card" ng-controller="JobCtrl as jctrl" ng-show="hasJob()">
+        <div class="card-toolbar" layout="row" layout-align="start center">
+          <span class="md-headline">Job status for {{job.name}}</span>
         </div>
+
+        <table class="mdl-data-table">
+          <thead>
+            <tr>
+              <th class="mdl-data-table__cell--non-numeric">Counter</th>
+              <th>Value</th>
+              <th>Rate (/s)</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="ctr in counters track by ctr.name">
+              <td class="mdl-data-table__cell--non-numeric">{{ctr.name}}</td>
+              <td>{{ctr.value|number:0}}</td>
+              <td>{{ctr.rate|number:0}}</td>
+            </tr>
+          </tbody>
+        </table>
+
+      </div>
+
     </md-content>
   </div>
 
