Wikidata date conversion

--- a/sling/nlp/kb/app/index.html
+++ b/sling/nlp/kb/app/index.html
@@ -111,6 +111,11 @@
               </span>
               <span flex></span>
               <md-button class="md-icon-button">
+                <a ng-href="https://www.wikidata.org/wiki/Special:EntityData/{{item.ref}}.json">
+                  <i class="material-icons">library_books</i>
+                </a>
+              </md-button>
+              <md-button class="md-icon-button">
                 <a ng-href="/kb/item?fmt=json&id={{item.ref}}">
                   <i class="material-icons">code</i>
                 </a>
