Dashboard tab updates

--- a/sling/task/app/index.html
+++ b/sling/task/app/index.html
@@ -104,7 +104,7 @@
         <md-tab ng-repeat="job in jobs" label="{{job.name}}">
 
           <!-- Channels -->
-          <table class="mdl-data-table mdl-shadow--2dp counter-table">
+          <table class="mdl-data-table mdl-shadow--2dp counter-table" width="100%">
             <thead>
               <tr>
                 <th class="mdl-data-table__cell--non-numeric">Channel</th>
@@ -118,12 +118,12 @@
             </thead>
             <tbody>
               <tr ng-repeat="channel in job.channels  | orderBy: 'name' track by channel.name">
-                <td class="mdl-data-table__cell--non-numeric">{{channel.name}}</td>
-                <td>{{channel.key_bytes|number:0|width:20}}</td>
-                <td>{{channel.value_bytes|number:0|width:20}}</td>
-                <td>{{channel.bandwidth / 100000|number:3|width:20}} MB/s</td>
-                <td>{{channel.messages|number:0|width:20}}</td>
-                <td>{{channel.throughput|number:0|width:20}} MPS</td>
+                <td class="mdl-data-table__cell--non-numeric"  width="30ch">{{channel.name}}</td>
+                <td>{{channel.key_bytes|number:0}}</td>
+                <td>{{channel.value_bytes|number:0}}</td>
+                <td>{{channel.bandwidth / 100000|number:3}} MB/s</td>
+                <td>{{channel.messages|number:0}}</td>
+                <td>{{channel.throughput|number:0}} MPS</td>
                 <td>{{channel.shards_done}} / {{channel.shards_total}}</td>
               </tr>
             </tbody>
