--- a/sling/task/app/index.html
+++ b/sling/task/app/index.html
@@ -93,7 +93,7 @@
           <tr ng-repeat="job in jobs track by job.name">
             <td>#{{job.id}}</td>
             <td class="mdl-data-table__cell--non-numeric">{{job.name}}</td>
-            <td>{{job.hours}}h {{job.mins | padding: 2}}m {{job.secs | padding: 2}}s</td>
+            <td>{{job.hours}}h {{job.mins|padding:2}}m {{job.secs|padding:2}}s</td>
             <td class="mdl-data-table__cell--non-numeric" width="100%">{{job.progress}}</td>
           </tr>
         </tbody>
@@ -121,7 +121,7 @@
                 <td class="mdl-data-table__cell--non-numeric"  width="30ch">{{channel.name}}</td>
                 <td>{{channel.key_bytes|number:0}}</td>
                 <td>{{channel.value_bytes|number:0}}</td>
-                <td>{{channel.bandwidth / 100000|number:3}} MB/s</td>
+                <td>{{channel.bandwidth / 1000000|number:3}} MB/s</td>
                 <td>{{channel.messages|number:0}}</td>
                 <td>{{channel.throughput|number:0}} MPS</td>
                 <td>{{channel.shards_done}} / {{channel.shards_total}}</td>
