--- a/sling/nlp/kb/app/index.html
+++ b/sling/nlp/kb/app/index.html
@@ -201,7 +201,7 @@
               </md-button>
             </div>
 
-            <table class="xref-tab">
+            <table class="xref-tab" md-truncate>
               <tr class="xref-row" ng-repeat="x in item.xrefs">
                 <td class="xref-name">
                   <a ng-href="{{itemUrl(x.ref)}}">{{x.property}}</a>
