--- a/sling/task/app/index.html
+++ b/sling/task/app/index.html
@@ -108,7 +108,7 @@
             <tbody>
               <tr>
                 <td width="30%">TIME</td>
-                <td width="70%"align="right">{{census.hours}}:{{census.mins|padding:2}}:{{census.secs|padding:2}}</td>
+                <td width="70%"align="right">{{census.hours}} : {{census.mins|padding:2}} : {{census.secs|padding:2}}</td>
               </tr>
               <tr>
                 <td width="30%">CPU</td>
@@ -120,7 +120,7 @@
               </tr>
               <tr>
                 <td width="30%">I/O</td>
-                <td width="70%" align="right">{{census.io|number:0}}/sec</td>
+                <td width="70%" align="right">{{(census.io / 1000)|number:0}} K/s</td>
               </tr>
             </tbody>
           </table>
