Change background for resource display

--- a/sling/task/app/index.html
+++ b/sling/task/app/index.html
@@ -104,7 +104,7 @@
 
         <!-- Resource usage -->
         <div ng-show="census">
-          <table class="res">
+          <table class="mdl-shadow--2dp res">
             <tbody>
               <tr>
                 <td width="30%">TIME</td>
