--- a/sling/nlp/kb/app/index.html
+++ b/sling/nlp/kb/app/index.html
@@ -173,6 +173,48 @@
             </table>
           </div>
 
+          <!-- Item categories card -->
+          <div class="card" ng-show="hasCategories()">
+            <div class="card-toolbar" layout="row" layout-align="start center">
+              <span class="md-headline">Categories</span>
+              <span flex></span>
+              <md-button class="md-icon-button">
+                <i class="material-icons">expand_less</i>
+              </md-button>
+            </div>
+
+            <table class="prop-tab">
+              <tr class="prop-row" ng-repeat="c in item.categories">
+                <td class="prop-value">
+                  <a ng-href="{{itemUrl(c.ref)}}">{{c.text}}</a>
+                </td>
+
+                <!-- Property values -->
+                <td class="prop-values">
+                  <div class="prop-value" ng-repeat="v in p.values">
+                    <a ng-href="{{itemUrl(v.ref, v.url)}}">{{v.text}}</a>
+
+                    <!-- Property qualifiers -->
+                    <table class="qual-tab" ngshow="v.qualifiers">
+                      <tr class="qual-row" ng-repeat="qp in v.qualifiers">
+                        <td class="qprop-name">
+                          <a ng-href="{{itemUrl(qp.ref)}}">{{qp.property}}</a>
+                        </td>
+                        <td class="qprop-values">
+                          <div class="qprop-value" ng-repeat="qv in qp.values">
+                            <a ng-href="{{itemUrl(qv.ref, qv.url)}}">
+                              {{qv.text}}
+                            </a>
+                          </div>
+                        </td>
+                      </tr>
+                    </table>
+                  </div>
+                </td>
+              </tr>
+            </table>
+          </div>
+
         </div>
         <div layout="column" layout-align="start stretch" flex="30">
 
