Preact wrappers for Material Design components

--- a/sling/nlp/document/app/index.html
+++ b/sling/nlp/document/app/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name=viewport content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
+  <link rel="stylesheet" href="/common/external/material-icons.css">
+  <link rel="stylesheet" href="/common/external/material.css">
   <title>Document analyzer</title>
 </head>
 <body style="height: 100%; width: 100%;">
