Preact-based document app skeleton

--- a/sling/nlp/document/app/index.html
+++ b/sling/nlp/document/app/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html style="height: 100%; width: 100%;">
 <head>
   <meta charset="utf-8">
   <meta name=viewport content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/common/external/material-icons.css">
   <link rel="stylesheet" href="/common/external/material.css">
+  <link rel="stylesheet" href="doc.css">
   <title>Document analyzer</title>
 </head>
 <body style="height: 100%; width: 100%;">
