Span and token rendering

--- a/sling/nlp/document/app/index.html
+++ b/sling/nlp/document/app/index.html
@@ -5,8 +5,9 @@
   <meta name=viewport content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/common/external/material-icons.css">
   <link rel="stylesheet" href="/common/external/material.css">
+  <link rel="stylesheet" href="/common/style/docview.css">
   <link rel="stylesheet" href="doc.css">
-  <title>Document analyzer</title>
+  <title>Corpus browser</title>
 </head>
 <body style="height: 100%; width: 100%;">
   <script type="module" src="doc.js"></script>
