--- a/sling/nlp/document/app/index.html
+++ b/sling/nlp/document/app/index.html
@@ -3,13 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name=viewport content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/common/external/material-icons.css">
-  <link rel="stylesheet" href="/common/external/material.css">
-  <link rel="stylesheet" href="/common/style/docview.css">
-  <link rel="stylesheet" href="doc.css">
   <title>Corpus browser</title>
 </head>
-<body style="height: 100%; width: 100%;">
+<body style="height: 100%; width: 100%; visibility: hidden;"
+      onload="document.body.style.visibility='visible'">
   <script type="module" src="doc.js"></script>
 </body>
 </html>
+
