--- a/sling/nlp/document/app/corpus.html
+++ b/sling/nlp/document/app/corpus.html
@@ -7,7 +7,7 @@
 </head>
 <body style="height: 100%; width: 100%; visibility: hidden;"
       onload="document.body.style.visibility='visible'">
-  <script type="module" src="doc.js"></script>
+  <script type="module" src="corpus.js"></script>
 </body>
 </html>
 
