--- a/sling/nlp/document/app/analyzer.html
+++ b/sling/nlp/document/app/analyzer.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name=viewport content="width=device-width, initial-scale=1">
-  <title>LEX viewer</title>
+  <title>SLING document analyzer</title>
 </head>
 <body style="height: 100%; width: 100%; visibility: hidden;"
       onload="document.body.style.visibility='visible'">
-  <script type="module" src="lex.js"></script>
+  <script type="module" src="analyzer.js"></script>
 </body>
 </html>
 
