KB browser ctrl actions

--- a/sling/nlp/kb/app/index.html
+++ b/sling/nlp/kb/app/index.html
@@ -25,16 +25,13 @@
             <!-- Item card -->
             <kb-item-card id="item">
               <md-text id="title"></md-text>
-              <md-link id="ref" newtab="true"></md-link>
+              <md-link id="ref" newtab="true" external="true"></md-link>
               <md-text id="description"></md-text>
               <md-text id="datatype"></md-text>
             </kb-item-card>
 
             <!-- Item properties card -->
             <kb-property-card id="properties">
-              <md-card-toolbar>
-                <div>Properties</div>
-              </md-card-toolbar>
               <kb-property-table id="property-table">
               </kb-property-table>
             </kb-property-card>
