Add noreferrer to external urls in KB browser

--- a/sling/nlp/kb/app/index.html
+++ b/sling/nlp/kb/app/index.html
@@ -28,7 +28,7 @@
               <md-card-toolbar>
                 <div>
                   <md-text id="title"></md-text>
-                  <md-link id="ref" newtab="true" external="true"></md-link>
+                  <md-link id="ref" notab="1" newtab="1" external="1"></md-link>
                 </div>
               </md-card-toolbar>
               <div><md-text id="description"></md-text></div>
