--- a/sling/nlp/kb/app/index.html
+++ b/sling/nlp/kb/app/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name=viewport content="width=device-width, initial-scale=1">
   <title>SLING Knowledge base</title>
-  <link rel="icon" href="/common/image/rr-logo.svg" type="image/gif" />
+  <link rel="icon" href="/common/image/appicon.ico" type="image/x-icon" />
   <script type="module" src="/common/lib/material.js"></script>
   <script type="module" src="kb.js"></script>
 </head>
