--- a/sling/task/app/index.html
+++ b/sling/task/app/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name=viewport content="width=device-width, initial-scale=1">
   <title>Jobs - SLING</title>
-  <link rel="shortcut icon" href="/common/image/rr-logo.ico" type="image/x-icon" />
+  <link rel="icon" href="/common/image/appicon.ico" type="image/x-icon" />
   <script type="module" src="/common/lib/material.js"></script>
   <script type="module" src="dashboard.js"></script>
 </head>
