Fix icon hiding problem in task dashboard

--- a/sling/task/app/index.html
+++ b/sling/task/app/index.html
@@ -17,8 +17,8 @@
         <div id="title">Job Status</div>
         <md-spacer></md-spacer>
 
-        <md-icon id="done" icon="done" style="display: none"></md-icon>
-        <md-icon id="error" icon="error"  style="display: none"></md-icon>
+        <md-icon id="done" icon="done"></md-icon>
+        <md-icon id="error" icon="error"></md-icon>
 
         <md-icon-button id="play5" icon="forward_5"></md-icon-button>
         <md-icon-button id="play10" icon="forward_10"></md-icon-button>
