--- a/sling/nlp/kb/app/index.html
+++ b/sling/nlp/kb/app/index.html
@@ -30,6 +30,8 @@
                   <md-text id="title"></md-text>
                   <md-link id="ref" notab="1" newtab="1" external="1"></md-link>
                 </div>
+                <md-spacer></md-spacer>
+                <md-icon-button id="code" icon="code"></md-icon-button>
               </md-card-toolbar>
               <div><md-text id="description"></md-text></div>
               <div><md-text id="datatype"></md-text></div>
